(library
 (name ppxlib_parsing)
 (public_name ppxlib-parsing)
 (libraries ppxlib menhirLib)
 (flags :standard -w -9))

(menhir
 (modules ppxlib_parser)
 (flags --explain --dump --lalr --strict --table -lg 1 -la 1
   --fixed-exception --unused-token COMMENT --unused-token DOCSTRING
   --unused-token EOL --unused-token GREATERRBRACKET))

(ocamllex ppxlib_lexer)
